coded javascript file game.js and altered index.html with a few id tags to correspond to the getElementById sections of the game.js code

--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
                   </div>
                   <div class="col-md textcolor">
                     <span>Press any key to get <br> started! <br><br>
-                        <span>Wins:<span id="wins"></span></span>
+                        <span>Wins: <span id="wins"></span> <br><span id="correct"></span></span>
                     </span> 
                   </div>
                 </div>
 
                 <div class="row">
                         <div class="col-md textcolor">
-                          <span></span>
+                          <span id="picture"></span>
                         </div>
-                        <div class="col-md textcolor"  id="border1">
-                          <span><br> Number of Guesses <br> Remaining <br> <span id="guessesleft"></span> <br> Letters already guessed <br><br><span id="lettersguessed"></span>  </span> 
+                        <div class="col-md textcolor"  id="border1" style="color: white;">
+                          <span><br> Number of Guesses <br> Remaining: <br> <span id="guessesleft"></span> <br> Letters already guessed <br><br><span id="ltrguess"></span>  </span> 
                         </div>
                 </div>
 
@@ -43,7 +43,7 @@
                           <span></span>
                         </div>
                         <div style="color:black;" class="col-md textcolor">
-                          <span><br> Number of Guesses <br> Remaining <span></span> <br> Letters already guessed  </span> 
+                          <span><br> Number of Guesses <br> Remaining <span></span> <br> Letters already guessed <br> <span id="ltrguess"></span> </span> 
                         </div>
                 </div>
 
